--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "essp"
 version = "0.1.0"
+license = "MIT"
 authors = ["Juhasz Sandor <blackghost1987@gmail.com>"]
+repository = "https://github.com/endticket/essp"
+description = "ESSP protocol implementation for handling payment devices"
 
 [dependencies]
 serial = "^0.4.0"
